# asgl

./: .envrc  .gitignore  .gitlab-ci.yml  .travis.yml  BoolSpace.cpp  BoolSpace.h  Dockerfile  IntSpace.cpp  IntSpace.h  Makefile  Makefile.in  PrBABSpace.h  README.md  Rakefile  af-constraints.lisp  asgl.lisp  configure.ac  cover-report.txt  dec-testcases.lisp  default.nix  ecl-1.16.2-libffi-3.3-abi.patch  ecl-cpp.nix  ee-testcases.lisp  foo.html  foo.lisp  foo.org  gecode-patched-headers.tgz  gecode.lisp  gecode.nix  gemset.nix  hello.lisp  index.html  nix-build.sh  nix-test.sh  p.lisp  run-night1  run1  run2  sat.lisp  shell.nix  (+2 more)
.github/workflows/: ci.yml
common/asgl-config/: asgl-config.asd  asgl-config.cxx  asgl-config.lisp
common/early/: apx.cxx  apx.lisp  asgl-config.lisp  count_args.rl  cover.cxx  cover.lisp  early.asd  graph-input.cxx  graph-input.lisp  graph.cxx  graph.lisp  make.mk.patch  myfoo.h  myfoo.rl  package.cxx  package.lisp  ragel_apx_parse.h  ragel_apx_parse.rl  slurp.cpp  utils.cxx  utils.lisp
data/: iccma15_solutions.tar.xz  real-ee-gr-solutions.tar.xz
data/apx/: 10-127r681ird483nf0u56u.EE-CO  10-127r681ird483nf0u56u.EE-PR  10-127r681ird483nf0u56u.EE-ST  10-127r681ird483nf0u56u.apx  10-1luwnm85wjwejj40np2o.EE-CO  10-1luwnm85wjwejj40np2o.EE-PR  10-1luwnm85wjwejj40np2o.EE-ST  10-1luwnm85wjwejj40np2o.apx  10-2bnpb1eolup6jmo8359v.EE-CO  10-2bnpb1eolup6jmo8359v.EE-PR  10-2bnpb1eolup6jmo8359v.EE-ST  10-2bnpb1eolup6jmo8359v.apx  10-oc8pxvdozslj28z334i.apx  (+99 more)
features/: comb-ee.feature  complete.feature  cons-encoding.feature  dummy-hello-lisp.feature  dummy-lines.feature  error-handling.feature  formats.feature  grounded.feature  informational.feature  new.feature  official.feature  preferred.feature  stable.feature  stable.features  syntax.feature  version.feature
files/: ecl-16.1.2-amd64.tar.bz2
gitlab-ci/: run.sh
gr1/: Sp.cpp  Sp.h  gr1.lisp  unused.lisp
lingeling/: .gitignore  build.sh  readme.txt
lisp-scripts/: collect-timings.lisp  compile-asgl.lisp.in  compile-file-system-p.lisp  compile-file-system-p.lisp.in  compile-foo.lisp  compile-foo.lisp.in  compile-gr1.lisp  compile-v1.lisp.in  deps.lisp  load-fas.lisp
patches/: patho-many-sols.patch  play-with-branch.patch  profile-gr1.patch
scripts/: clean.sh  generate-make-mk.sh  make-all-variants.sh  ws-indent-all.sh
support/: build  fixes.sh  ref-wrapper.sh
tests/: tests-apx.lisp  tests-complete.lisp  tests-engine.lisp  tests-gecode.lisp  tests-grounded.lisp  tests-make-problem-cli-comb.lisp  tests-make-problem-cli.lisp  tests-preferred.lisp  tests-quick.lisp  tests-stable.lisp  tests-unit.lisp  tests.lisp
timings/: asgl_r  timings-10m-r1-000-000-001.txt  timings-2m-r1-000-000-001.txt  timings-2m-r1-000-000-006.txt  timings-2m-r1-010-010-010.txt
tools/: source-files.txt  whitespace-cleanup.el
travis/: install.sh  script.sh
v1/: BoolSpace.cpp  BoolSpace.h  DfsSpace.cpp  DfsSpace.h  Foo.cpp  Foo.h  IntSpace.cpp  IntSpace.h  PrBABSpace.cpp  PrBABSpace.h  unused.lisp  v1.lisp
(+66 files in other folders)
